--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get_it: ^9.2.0
-  flutter_bloc: ^9.1.1
+  flutter_bloc: ^7.0.0
   equatable: ^2.0.8
   dartz: ^0.10.1
   url_launcher: ^6.3.2
@@ -25,6 +25,8 @@ dependencies:
   shared_preferences: ^2.2.0
   fluttertoast: ^9.0.0
   image_picker: ^1.2.1
+  path_provider: ^2.1.5
+  image: ^4.7.2
 
 dev_dependencies:
   flutter_test:
